# neo4jam

./: .gitignore  DEVLOG.md  README.md  cli.py  dvc.yaml  evaluation.py  generate_prompt.py  introspection.py  main.py  pyproject.toml
.config/: config.json
.dvc/: config
benchmark/: evaluationmetrics.py
constants/: globalconstant.py
data/: .gitignore  download.py  preprocess.py  text2cypher.dvc
drivers/: csvhandler.py
neo4jam/: cli.py  config.py  introspection.py  loadenv.py  prompt.py
neo4jam/ai/: generator.py
neo4jam/data/: download.py  evaluate.py  evaluatemetrics.py  gencyphers.py  preprocess.py
neo4jam/deepeval/: deepeval.py  deepgen.py
neo4jam/evaluation/: aggregate.py  evaluate.py  metrics.py
neo4jam/models/: __init__.py
neo4jam/models/google/: __init__.py
prompts/: prompt_movie_db_simple_1.txt  testprompts.py
samples/: prompt_movie_db_simple_condition_1.txt
