[tool.poetry]
name = "neo4jam"
version = "0.1.0"
description = "Neo4j self-service with LLM"
authors = ["Farhan Ahmad <farhan@knowchow.com>, Safwan Ahmad <safwan@knowchow.com>"]
license = "GNU LGPL"
readme = "README.md"
package-mode= false

[tool.poetry.dependencies]
python = "^3.12"
neo4j = "^5.27.0"
ollama = "^0.4.4"
pandas = "^2.2.3"
fastparquet = "^2024.11.0"
huggingface-hub = "^0.27.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.3"
pydantic-ai = "^0.0.20"
evaluate = "^0.4.3"
rouge-score = "^0.1.2"
pika = "^1.3.2"
tqdm = "^4.67.1"
typer = "^0.15.1"
dvc = {extras = ["ssh"], version = "^3.59.0"}
google-genai = "^1.1.0"


[tool.poetry.group.debug.dependencies]
memray = "^1.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
